Add more references.

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -123,3 +123,86 @@
  numpages = {5},
  acmid = {1808926},
 }
+
+@inproceedings{Graph,
+ author = {Nguyen, Anh Tuan and Nguyen, Tung Thanh and Nguyen, Hoan Anh and Tamrawi, Ahmed and Nguyen, Hung Viet and Al-Kofahi, Jafar and Nguyen, Tien N.},
+ title = {Graph-based Pattern-oriented, Context-sensitive Source Code Completion},
+ booktitle = {ICSE '12},
+ year = {2012},
+ pages = {69--79},
+ numpages = {11},
+ acmid = {2337232},
+}
+
+@inproceedings{Active,
+ author = {Omar, Cyrus and Yoon, YoungSeok and LaToza, Thomas D. and Myers, Brad A.},
+ title = {Active Code Completion},
+ booktitle = {ICSE '12},
+ year = {2012},
+ pages = {859--869},
+ numpages = {11},
+ acmid = {2337324},
+}
+
+@inproceedings{Calcite, 
+author={Mooty, M. and Faulring, A. and Stylos, J. and Myers, B.A.}, 
+booktitle={VL/HCC}, 
+title={Calcite: Completing Code Completion for Constructors Using Crowds}, 
+year={2010}, 
+month={Sept}, 
+pages={15-22}, 
+keywords={application program interfaces;program compilers;API;Calcite;Eclipse plugin;code completion;crowd sourcing;popup completion menu;user perform functions;user program;Context;Databases;Documentation;Electronic mail;Java;Production facilities;Web pages;API Documentation;Crowdsourcing;Eclipse;Natural Programming}, 
+}
+
+@inproceedings{SortFilter, 
+author={Daqing Hou and Pletcher, D.M.}, 
+booktitle={ICSM}, 
+title={An evaluation of the strategies of sorting, filtering, and grouping API methods for Code Completion}, 
+year={2011}, 
+month={Sept}, 
+pages={233-242}, 
+keywords={Java;application program interfaces;object-oriented programming;public domain software;sorting;API methods;BCC;IDE features;better code completion;context-specific filtering;dynamic reordering;open-source Java projects;sorting;Fires;Receivers;Code completion;Object-oriented Programming;Programming Environments}, 
+}
+
+@inproceedings{StructuralContext,
+ author = {Holmes, Reid and Murphy, Gail C.},
+ title = {Using Structural Context to Recommend Source Code Examples},
+ booktitle = {ICSE '05},
+ series = {ICSE '05},
+ year = {2005},
+ pages = {117--125},
+ numpages = {9},
+ acmid = {1062491},
+ keywords = {development environment framework, examples, recommender, software structure},
+}
+
+@inproceedings{Vertical, 
+author={Silva Junior, L.L.N. and Oliveira, T.N. and Plastino,A. and Murta, L.G.P.}, 
+booktitle={SBCARS}, 
+title={Vertical Code Completion: Going Beyond the Current Ctrl+Space}, 
+year={2012}, 
+month={Sept}, 
+pages={81-90}, 
+keywords={data mining;educational administrative data processing;program compilers;software maintenance;source coding;system documentation;Eclipse IDE;academic management system;data mining;documentation data;relevant knowledge extraction;sequential pattern mining;software development;software maintenance;source code repository;vertical code completion;Computer architecture;Context;Data mining;Documentation;Java;Software;Unified modeling language;Code Completion;Sequential Pattern Mining;Software Maintenance}, 
+}
+
+@inproceedings{Partial,
+ author = {Perelman, Daniel and Gulwani, Sumit and Ball, Thomas and Grossman, Dan},
+ title = {Type-directed Completion of Partial Expressions},
+ booktitle = {PLDI '12},
+ year = {2012},
+ pages = {275--286},
+ numpages = {12},
+ acmid = {2254098},
+ keywords = {code completion, partial expressions, program synthesis, ranking, type-based analysis},
+}
+
+@inproceedings{Automatic, 
+author={Hill, R. and Rideout, J.}, 
+booktitle={ASE '04}, 
+title={Automatic method completion}, 
+year={2004}, 
+month={Sept}, 
+pages={228-235}, 
+keywords={learning (artificial intelligence);program compilers;software engineering;automatic method completion;duplicate code segment;integrated development environments;large software project;machine learning;method name completion;refactoring tools;software development environments;variable name completion;Cloning;Computer science;Detectors;Educational institutions;Heart;Java;Machine learning algorithms;Programming profession;Software maintenance;Software systems}, 
+}
