--- a/paper/thesis-paper.tex
+++ b/paper/thesis-paper.tex
@@ -544,11 +544,21 @@ We found the best results by putting nesting structural heuristics results first
 \label{fig:ranker-uber-combined}
 \end{figure}
 
-Figure~\ref{fig:ranker-uber-combined} tells us that the textual methods did a much better job than the macro methods at including expected tokens in the list of results.
-In addition, we can see from figure~\ref{fig:ranker-combined} that the textual methods also did much better at prioritizing the list of suggested results.
-Even though macro heuristics and analysis suggested many of the correct tokens, almost none of the results were in the top five positions, which is what the ranked section of that graph shows.
+Figure~\ref{fig:ranker-uber-combined} shows the results of the ranker.
+The hit section shows how many tokens were suggested by the completer for a given completion method, while the missed section shows how many tokens did not appear in the list of suggestions.
+When a completion system is used as a means of text completion (i.e. the desired token is known but typing the whole token is tedious), tokens can show up anywhere in the list of suggestions as long as the list is filtered and reduced to prefix matches as the user types.
+We can see from this graph that the textual methods did a much better job than the macro methods at including expected tokens in the list of results.
+This suggests that textual methods provide higher text completion utility than the macro methods.
+
+Figure~\ref{fig:ranker-combined} shows the same data as figure~\ref{fig:ranker-uber-combined}, except that it splits the hit section into ranked and unranked sections.
+The ranked section shows how many tokens appeared in the top five suggestions for each method, suggesting that these tokens are easily and immediately visible to the user.
+The unranked section shows how many tokens were still suggested but appeared lower in the list, suggesting that some searching or scrolling is likely needed to find the token.
+When the completion system is used as a means of discovery (i.e. the desired token is unknown and the completion system is used as ideas of possible tokens), it is important for correct tokens to appear near the top of the list.
+We can see from this graph that the textual methods also did much better at prioritizing the list of suggested results.
+Even though macro heuristics and analysis suggested many of the correct tokens, almost none of the results were in the top five positions.
 This is mainly because textual heuristics are done on the source code, making different ordering algorithms easy to experiment with and use.
 On the other hand, macro heuristics and analysis are more meta by nature, not lending themselves to obvious sorting algorithms, leaving alphabetical the main alternative.
+These results suggest that textual methods also provide higher discovery utility than the macro methods.
 
 Among the textual methods, sorting by nesting level was by far the most effective.
 We can see from figure~\ref{fig:ranker-combined} that of the tokens that correctly made it into the list of results, nearly 45\% of them were ranked in the top five, as opposed to less than 25\% for the other two textual methods.
@@ -563,7 +573,7 @@ Since macro analysis did better in the macro camp and nesting level did better i
 Nesting level did much better at ordering, so those results were ordered first, with macro analysis results appended.
 Figure~\ref{fig:ranker-combined} shows how the results showing up in the top five spots stayed about the same.
 However, figure~\ref{fig:ranker-uber-combined} clearly shows the increased number of correct suggestions appearing in the list, while the results that didn't show up at all were significantly decreased by about 75\%.
-This shows that the results provided by the two types of methods were significantly non-overlapping.
+This shows that the results provided by the two types of methods were significantly non-overlapping, suggesting that augmenting the textual methods with the macro methods can increase the text completion utility of the system as a whole. 
 
 \section{Checker Results}
 
@@ -588,8 +598,9 @@ The checker replaces the token with a single suggestion and runs the resulting n
 If the program compiles and runs to completion without exceptions, the completion is considered a success.
 Otherwise, the run is marked as a failure.
 
+Figure~\ref{fig:checker-remove-percent} shows the percent of successful runs for each completion method when the removal source alteration method was used to modify the original source.
 Because the checker checks the first five results for success or failure, it is expected that the success rate of the checker would to a certain degree follow the success rate of the ranker.
-As we can see from figure~\ref{fig:checker-remove-percent}, the percent of successful runs of completion suggestions is higher for the textual methods than the macro methods, which matches our expectation.
+As we can see from figure~\ref{fig:checker-remove-percent}, the percent of successful runs of completion suggestions is higher for the textual methods than the macro methods, which matches our hypothesis.
 
 Figure~\ref{fig:checker-remove-percent} also shows that, among the textual methods, the function keywords approach led to the least failures.
 This makes sense because it is not unlikely to have multiple functions that take the same number and type of arguments, thus allowing the program to run without crashing (although likely with incorrect end results).
@@ -602,6 +613,7 @@ The function keywords approach had the least percentage of unbound identifier fa
 For the macro methods, the top occurring errors were syntax errors, which happened about twice as much as unbound identifier errors.
 This is instructive and expected because the point of the macro methods is to bring in globally available identifiers from external sources such as ones provided by the language itself or by imported modules, so incorrect use of them is most likely to be syntax related.
 
+Figure~\ref{fig:checker-truncate-percent} shows the percent of successful runs for each completion method when the truncate source alteration method was used to modify the original source.
 As we can see from figure~\ref{fig:checker-truncate-percent}, there isn't much difference between removing tokens and truncating the file as far as failures go.
 The one interesting thing to note is that the success percentage actually went up by truncating text for the function keywords method.
 This could mean that because the truncated file had fewer functions to choose from, the likelihood that one of them would match the calling function signature would be higher.
