--- a/paper/thesis-paper.tex
+++ b/paper/thesis-paper.tex
@@ -63,7 +63,7 @@ This information will be used to guide the development and evolution of a comple
 }
 
 \acknowledgments{%
-    Thanks to Dr. McCarthy for his support and patience.
+    Thanks to my wife and Dr. McCarthy for their support and patience.
 }
 
 \department{Computer~Science}
