Another set of suggestions by Dr. Morse.

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -32,7 +32,7 @@
 @inproceedings{Mapping,
  author = {Misek, Jakub and Zavoral, Filip},
  title = {Mapping of Dynamic Language Constructs into Static Abstract Syntax Trees},
- booktitle = {ICIS '10},
+ booktitle = {Proceedings of the 2010 IEEE/ACIS 9th International Conference on Computer and Information Science},
  year = {2010},
  pages = {625--630},
  numpages = {6},
@@ -43,7 +43,7 @@
 @inproceedings{History,
  author = {Robbes, R. and Lanza, M.},
  title = {How Program History Can Improve Code Completion},
- booktitle = {ASE '08},
+ booktitle = {Proceedings of the 2008 23rd IEEE/ACM International Conference on Automated Software Engineering},
  year = {2008},
  pages = {317--326},
  numpages = {10},
@@ -67,7 +67,7 @@
 
 @incollection{Semantic,
    title = {Syntactic and Semantic Prediction in Dynamic Languages},
-   booktitle = {SERA 2009},
+   booktitle = {Software Engineering Research, Management and Applications 2009},
    keyword = {Engineering},
    pages = {59-70},
    volume = {253},
@@ -95,7 +95,7 @@
 @inproceedings{Abbreviated,
  author = {Han, Sangmok and Wallace, David R. and Miller, Robert C.},
  title = {Code Completion from Abbreviated Input},
- booktitle = {ASE '09},
+ booktitle = {Proceedings of the 2009 IEEE/ACM International Conference on Automated Software Engineering},
  year = {2009},
  pages = {332--343},
  numpages = {12},
@@ -106,7 +106,7 @@
 @inproceedings{Examples,
  author = {Bruch, Marcel and Monperrus, Martin and Mezini, Mira},
  title = {Learning from examples to improve code completion systems},
- booktitle = {ESEC/FSE '09},
+ booktitle = {Proceedings of the the 7th joint meeting of the European software engineering conference and the ACM SIGSOFT symposium on The foundations of software engineering},
  year = {2009},
  pages = {213--222},
  numpages = {10},
@@ -117,7 +117,7 @@
 @inproceedings{Towards,
  author = {Hou, Daqing and Pletcher, David M.},
  title = {Towards a better code completion system by API grouping, filtering, and popularity-based ranking},
- booktitle = {RSSE '10},
+ booktitle = {Proceedings of the 2nd International Workshop on Recommendation Systems for Software Engineering},
  year = {2010},
  pages = {26--30},
  numpages = {5},
