--- a/paper/thesis-paper.tex
+++ b/paper/thesis-paper.tex
@@ -99,7 +99,7 @@ This information will be used to guide the development and evolution of a comple
 
 \chapter{Introduction}
 
-\paragraph{Thesis Statement} Automated testing frameworks for completion systems reveal information and patterns that enable more informed and targeted improvements to such systems.
+\paragraph{Thesis Statement} Automated testing frameworks for completion systems of dynamically-typed languages reveal information and patterns that enable more informed and targeted improvements to such systems.
 
 \paragraph{} The main purpose of autocompletion is to improve programmer productivity.
 This has mainly been accomplished in two ways.
@@ -110,7 +110,7 @@ For example, a list of currently valid (i.e. in scope, correctly typed, etc.) su
 Also, a function's signature and purpose can be displayed next to the typed function name.
 This thesis focuses on the first way of completing textual tokens rather than providing convenient documentation.
 
-Static type information makes it relatively simple for completions systems for such languages to filter out invalid results.
+Static type information makes it relatively simple for completion systems for such languages to filter out invalid results.
 However, because type information is not known statically in other languages, it is possible and easy to suggest tokens that may result in runtime errors and others that may not even compile.
 Because static type information makes it possible to suggest completions with high assurance of being valid, research and work on completers for such languages have focused mainly on presenting these valid results in a way that is more useful to the programmer.
 For instance, instead of giving all valid results in alphabetical order, results can be omitted or promoted closer to the top of the list based on context, type, or analysis of previous code.
@@ -325,29 +325,29 @@ Dynamic information is either ignored or else semantic analysis and type inferen
 None of these systems provide or document any sort of testing or validation framework.
 
 For traditional completion systems, many possible improvements have been explored over the traditional alphabetical sorting of all possible suggestions.
-The jungloid mining approach~\cite{Jungloid} uses intimate knowledge about the Java type system, library and API functions, example code, and the current context of the program to suggest ways to get from one type to another type through intermediate steps.
+Jungloid mining~\cite{Jungloid} uses intimate knowledge about the Java type system, library and API functions, example code, and the current context of the program to suggest ways to get from one type to another type through intermediate steps.
 Bcc~\cite{BCC} sorts by Java type starting with methods provided from the declared type and then up the type hierarchy until the base Object class.
 It also allows for custom filters to be specified by the programmer.
-The abbreviated input approach\cite{Abbreviated} takes abbreviated input instead of prefixes and uses a hidden Markov model to determine what was meant.
+Another paper takes abbreviated input instead of prefixes and uses a hidden Markov model to determine what was meant~\cite{Abbreviated}.
 For example, the expression \texttt{ch.opn(n)} would turn into \texttt{chooser.showOpenDialog(null)}.
-The program history approach~\cite{History} tracks all changes to the codebase and prioritizes suggestions based on how recently methods and objects have been changed.
-The examples approach~\cite{Examples} uses existing code (such as the Eclipse code base) as training data to implement three different completion systems.
+Another paper tracks all changes to the codebase and prioritizes suggestions based on how recently methods and objects have been changed~\cite{History}.
+One paper uses existing code (such as the Eclipse code base) as training data to implement three different completion systems~\cite{Examples}.
 The first orders suggestions based on how frequently they are used.
 The second uses limited context information to create association rules that govern suggestion order.
-For instance, one rule might be that after objects are created, suggest setters on those objects.
+For instance, one rule might be to suggest setters on objects after they are created.
 The third gathers context and uses a modification of the k-nearest-neighbor algorithm to order suggestions based on the nearest snippets found in the training data.
 
 Most validation techniques run their systems on modified existing code and rank the results in some way.
-The authors of the abbreviated input paper~\cite{Abbreviated} ran their system on 3000 lines of code from 6 open source projects that were turned into acronym-like abbreviations.
-They measured how many lines could be completed and how many of those were in the top-N (i.e. top-1 or top-5) suggested completions.
-Hou and Pletcher~\cite{Towards} ran their completion system at every Swing method in several open source projects.
-They ranked how high in the suggestions list the actual method appeared and added all rankings together to get an overall ranking for the system.
-The program history paper~\cite{History} ran their completion system between every recorded change operation (defined as a change in the AST) on a project of theirs called SpyWare.
-They then recorded what percentage of actual methods were in the top-N suggestions.
-Lastly, the examples paper~\cite{Examples} used the Eclipse code base and randomly split the code into 90\% training data and 10\% test data.
-They then took out half of the Swing method calls in the test data and ran their completion system in each hole.
-They measured recall, which is how often a used method was in the suggestion list, and precision, which is what fraction of suggested methods were actually used.
-They then combined these two measures into an F1-measure to give an overall grade to a system.
+One paper~\cite{Abbreviated} runs their system on 3000 lines of code from 6 open source projects that were turned into acronym-like abbreviations.
+They measure how many lines could be completed and how many of those are in the top-N (i.e. top-1 or top-5) suggested completions.
+Hou and Pletcher~\cite{Towards} run their completion system at every Swing method in several open source projects.
+They rank how high in the suggestions list the actual method appear and add all rankings together to get an overall ranking for the system.
+Another paper~\cite{History} runs their completion system between every recorded change operation (defined as a change in the AST) on a project of theirs called SpyWare.
+They then record what percentage of actual methods were in the top-N suggestions.
+Lastly, another paper~\cite{Examples} uses the Eclipse code base to randomly split the code into 90\% training data and 10\% test data.
+They then take out half of the Swing method calls in the test data and run their completion system in each hole.
+They measure recall, which is how often a used method was in the suggestion list, and precision, which is what fraction of suggested methods were actually used.
+They then combine these two measures into an F1-measure to give an overall grade to a system.
 
 Several papers use methods that rely heavily on static information and context that is not feasible to get in Racket because of the reasons described in the introduction.
 One paper uses a database of API usage patterns to improve completion~\cite{Graph}.
@@ -363,7 +363,7 @@ Finally, Automatic method completion~\cite{Automatic} attempts to take completio
 
 The lack of testing done on dynamic auto-completers helps emphasize the need for a validation system for such languages.
 Most testing is done by comparing completion results of modified existing source to the original source.
-The metrics they used are all similar and help define metrics in a way that works best for such validation systems.
+The metrics they use are all similar and help define metrics in a way that works best for such validation systems.
 Lastly, although a lot of improvements are type-system specific, some methods work without static type information and are used as starting points for methods implemented in this thesis.
 
 \chapter{Implementation}
@@ -397,8 +397,7 @@ We then randomly choose a percentage of those tokens to test against.
 There are many ways a source file can be modified.
 One way is to create a new source file and begin filling it with code.
 Another is to take an existing source file and either add more source or modify the existing source.
-We predicted that the second case is easier to complete against because there was more information.
-We weren't surprised to find that this was true.
+We predict that the second case is easier to complete against because there is more information.
 In order to use existing source as test data, the original source must be modified to remove one or more tokens at which point the completer will be run.
 We choose two simple ways to modify the source.
 The first way is to truncate the source file after the chosen identifier.
@@ -416,7 +415,7 @@ We implement both methods of verification in our automated testing framework.
 
 \subsection*{Ranker}
 
-For a given token in a source file, the ranker modifies the file at that position, either by removing or truncating as described above, and then invoke an auto-completer to get a list of completion results.
+For a given token in a source file, the ranker modifies the file at that position, either by removing or truncating as described above, and then invokes an auto-completer to get a list of completion results.
 It then compares the list of results to the original token, which represents the programmer's intent.
 If the original token is found in the first $n$ results (a configurable number), its rank is recorded.
 It is also noted whether the original token is found later in the list or not at all.
@@ -486,7 +485,7 @@ The way to apply a function in Racket to a set of arguments is by following an o
 This information can be used to prioritize certain completions above others, depending on file position.
 
 For language keywords, a regular expression is used to find all function names based on the \scheme{define} and \scheme{let} keywords.
-We then determine whether the position of the completer invocation was in function application position by checking if the position is directly after an opening parenthesis.
+We then determine whether the position of the completer invocation is in function application position by checking if the position is directly after an opening parenthesis.
 If this is the case, all function names found with the keyword regular expression are prioritized ahead of all other tokens.
 
 \subsection{Macro Heuristics}
