Use full conference names in references.

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1,15 +1,12 @@
-@article{Jungloid,
+@inproceedings{Jungloid,
  author = {Mandelin, David and Xu, Lin and Bod\'{\i}k, Rastislav and Kimelman, Doug},
- title = {Jungloid mining: helping to navigate the API jungle},
- journal = {SIGPLAN Not.},
- volume = {40},
- issue = {6},
- month = {June},
+ title = {Jungloid Mining: Helping to Navigate the API Jungle},
+ booktitle = {Proceedings of the 2005 ACM SIGPLAN Conference on Programming Language Design and Implementation},
  year = {2005},
+ location = {Chicago, IL, USA},
  pages = {48--61},
  numpages = {14},
  acmid = {1065018},
- address = {New York, NY, USA},
  keywords = {mining, program synthesis, reuse},
 }
 
@@ -78,7 +75,7 @@
   added-at = {2009-11-17T00:00:00.000+0100},
   author = {Pletcher, David M. and Hou, Daqing},
   biburl = {http://www.bibsonomy.org/bibtex/234d4776af37fc40089efabc4c600d916/dblp},
-  booktitle = {ICSM},
+  booktitle = {Software Maintenance, 2009. ICSM 2009. IEEE International Conference on},
   crossref = {conf/icsm/2009},
   date = {2009-11-17},
   description = {dblp},
@@ -127,7 +124,7 @@
 @inproceedings{Graph,
  author = {Nguyen, Anh Tuan and Nguyen, Tung Thanh and Nguyen, Hoan Anh and Tamrawi, Ahmed and Nguyen, Hung Viet and Al-Kofahi, Jafar and Nguyen, Tien N.},
  title = {Graph-based Pattern-oriented, Context-sensitive Source Code Completion},
- booktitle = {ICSE '12},
+ booktitle = {Proceedings of the 34th International Conference on Software Engineering},
  year = {2012},
  pages = {69--79},
  numpages = {11},
@@ -137,7 +134,7 @@
 @inproceedings{Active,
  author = {Omar, Cyrus and Yoon, YoungSeok and LaToza, Thomas D. and Myers, Brad A.},
  title = {Active Code Completion},
- booktitle = {ICSE '12},
+ booktitle = {Proceedings of the 34th International Conference on Software Engineering},
  year = {2012},
  pages = {859--869},
  numpages = {11},
@@ -146,7 +143,7 @@
 
 @inproceedings{Calcite, 
 author={Mooty, M. and Faulring, A. and Stylos, J. and Myers, B.A.}, 
-booktitle={VL/HCC}, 
+booktitle={Visual Languages and Human-Centric Computing (VL/HCC), 2010 IEEE Symposium on}, 
 title={Calcite: Completing Code Completion for Constructors Using Crowds}, 
 year={2010}, 
 month={Sept}, 
@@ -156,7 +153,7 @@ keywords={application program interfaces;program compilers;API;Calcite;Eclipse p
 
 @inproceedings{SortFilter, 
 author={Daqing Hou and Pletcher, D.M.}, 
-booktitle={ICSM}, 
+booktitle={Software Maintenance (ICSM), 2011 27th IEEE International Conference on}, 
 title={An evaluation of the strategies of sorting, filtering, and grouping API methods for Code Completion}, 
 year={2011}, 
 month={Sept}, 
@@ -167,7 +164,7 @@ keywords={Java;application program interfaces;object-oriented programming;public
 @inproceedings{StructuralContext,
  author = {Holmes, Reid and Murphy, Gail C.},
  title = {Using Structural Context to Recommend Source Code Examples},
- booktitle = {ICSE '05},
+ booktitle = {Proceedings of the 27th International Conference on Software Engineering},
  series = {ICSE '05},
  year = {2005},
  pages = {117--125},
@@ -178,7 +175,7 @@ keywords={Java;application program interfaces;object-oriented programming;public
 
 @inproceedings{Vertical, 
 author={Silva Junior, L.L.N. and Oliveira, T.N. and Plastino,A. and Murta, L.G.P.}, 
-booktitle={SBCARS}, 
+booktitle={Software Components Architectures and Reuse (SBCARS), 2012 Sixth Brazilian Symposium on}, 
 title={Vertical Code Completion: Going Beyond the Current Ctrl+Space}, 
 year={2012}, 
 month={Sept}, 
@@ -189,7 +186,7 @@ keywords={data mining;educational administrative data processing;program compile
 @inproceedings{Partial,
  author = {Perelman, Daniel and Gulwani, Sumit and Ball, Thomas and Grossman, Dan},
  title = {Type-directed Completion of Partial Expressions},
- booktitle = {PLDI '12},
+ booktitle = {Proceedings of the 33rd ACM SIGPLAN Conference on Programming Language Design and Implementation},
  year = {2012},
  pages = {275--286},
  numpages = {12},
@@ -199,7 +196,7 @@ keywords={data mining;educational administrative data processing;program compile
 
 @inproceedings{Automatic, 
 author={Hill, R. and Rideout, J.}, 
-booktitle={ASE '04}, 
+booktitle={Proceedings of the 19th IEEE International Conference on Automated Software Engineering}, 
 title={Automatic method completion}, 
 year={2004}, 
 month={Sept}, 
