Capitalize API in references.

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1,6 +1,6 @@
 @inproceedings{Jungloid,
  author = {Mandelin, David and Xu, Lin and Bod\'{\i}k, Rastislav and Kimelman, Doug},
- title = {Jungloid Mining: Helping to Navigate the API Jungle},
+ title = {Jungloid Mining: Helping to Navigate the {API} Jungle},
  booktitle = {Proceedings of the 2005 ACM SIGPLAN Conference on Programming Language Design and Implementation},
  year = {2005},
  location = {Chicago, IL, USA},
@@ -85,7 +85,7 @@
   keywords = {dblp},
   pages = {393-394},
   timestamp = {2009-11-17T00:00:00.000+0100},
-  title = {BCC: Enhancing code completion for better API usability.},
+  title = {BCC: Enhancing code completion for better {API} usability.},
   year = 2009
 }
 
@@ -113,7 +113,7 @@
 
 @inproceedings{Towards,
  author = {Hou, Daqing and Pletcher, David M.},
- title = {Towards a better code completion system by API grouping, filtering, and popularity-based ranking},
+ title = {Towards a better code completion system by {API} grouping, filtering, and popularity-based ranking},
  booktitle = {Proceedings of the 2nd International Workshop on Recommendation Systems for Software Engineering},
  year = {2010},
  pages = {26--30},
@@ -154,7 +154,7 @@ keywords={application program interfaces;program compilers;API;Calcite;Eclipse p
 @inproceedings{SortFilter, 
 author={Daqing Hou and Pletcher, D.M.}, 
 booktitle={Software Maintenance (ICSM), 2011 27th IEEE International Conference on}, 
-title={An evaluation of the strategies of sorting, filtering, and grouping API methods for Code Completion}, 
+title={An evaluation of the strategies of sorting, filtering, and grouping {API} methods for Code Completion}, 
 year={2011}, 
 month={Sept}, 
 pages={233-242}, 
